--- a/Interface_Layer/Index.html
+++ b/Interface_Layer/Index.html
@@ -1,34 +1,41 @@
 ﻿<!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Midis Seguridad | Index</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="Content/bootstrap.min.css" media="screen">
-    <link rel="stylesheet" href="Content/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Angular JS app</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
+
 </head>
-<body ng-app="myApp">
-    <nav class="navbar navbar-inverse" role="navigation">
-        <div class="container-fluid">
+<body ng-app="myAppLogin">
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="Index.html">Midis Seguridad</a>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">Application name</a>
             </div>
-            <ul class="nav navbar-nav">
-
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="/login">Login<span class="caret"></span>
-                    </a>
-                </li>
-            </ul>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="#/home">Home</a></li>
+                    <li><a href="#/authenticated">Authenticated</a></li>
+                </ul>
+            </div>
         </div>
-    </nav>
+    </div>
+    <div class="container body-content" style="margin-top:40px;">
+        <data-ng-view></data-ng-view>
+        <hr />
+        <footer>
+            <p>&copy; Dotnet awesome!!!</p>
+        </footer>
+    </div>
 
-    <script type="text/javascript" src="Scripts/jquery-3.1.1.min.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="Scripts/bootstrap.min.js"></script>
-    <script type="text/javascript" src="Scripts/angular.min.js"></script>
-    <script type="text/javascript" src="Scripts/angular-route.min.js"></script>
-    <script type="text/javascript" src="Angular/myApp.module.js"></script>
-    <script type="text/javascript" src="Angular/Controllers/loginCtrl.js"></script>
-    <script type="text/javascript" src="Angular/Services/accountSrv.js"></script>
-    <script type="text/javascript" src="Angular/Services/loginSrv.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-route.js"></script>
+    <script src="/Angular/myAppLogin.js"></script>
 </body>
 </html>
