--- a/Interface_Layer/Index.html
+++ b/Interface_Layer/Index.html
@@ -28,7 +28,7 @@
         <data-ng-view></data-ng-view>
         <hr />
         <footer>
-            <p>&copy; Dotnet awesome!!!</p>
+            <p>&copy; Midis 2017 - DLopez</p>
         </footer>
     </div>
 
