--- a/Interface_Layer/Index.html
+++ b/Interface_Layer/Index.html
@@ -5,6 +5,7 @@
     <title>Angular JS app</title>
     <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="stylesheet" />-->
     <link rel="stylesheet" href="Content/bootstrap.min.css" media="screen">
+    <link rel="stylesheet" href="Content/style.css">
     <link rel="shortcut icon" type="image/x-icon" href="Images/favicon.ico" />
     <!--<link rel="stylesheet" href="Content/login_style.css">-->
 </head>
