--- a/Interface_Layer/Index.html
+++ b/Interface_Layer/Index.html
@@ -35,7 +35,7 @@
                     <!--<li><a ng-click="logout()" ng-show="$rootScope.estaLogeado">Desconcectarse</a></li>
                     <li><a ng-hide="$rootScope.estaLogeado">Concectarse</a></li>-->
                     
-                    <li><a ng-click="logout()">Desconcectarse</a></li>
+                    <li><a ng-click="logout()">Desconectarse</a></li>
                     <!--<li><a href="#/authenticated">Authenticated</a></li>-->
                 </ul>
             </div>
